# vitistrust

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  README.md  agents.md  foundry.toml  kill_pids.ps1  kill_port.ps1  pyproject.toml  render.yaml  requirements.txt  vercel.json
agents/: perception_agent.py  protocol_agent.py  reasoning_agent.py  validation_agent.py
backend/: benchmarks.py  certificate_generator.py  constants.py  main.py  requirements.txt  stellar_adapter.py  time_window.py
backend/data/: wine_regions.json
contracts/: VitisRegistry.sol
contracts/vitis_registry/: Cargo.toml
contracts/vitis_registry/src/: lib.rs  test.rs
docs/: pitch_slides.md  score_model_v1.md  stellar_cowork.md
frontend-react/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: Footer.jsx  Navbar.jsx  OracleModal.jsx  SatelliteView.jsx  StatsRow.jsx  TimeMachine.jsx  VerificationForm.jsx
frontend-react/src/sections/: AboutSection.jsx  HomeSection.jsx  HowItWorksSection.jsx  VerifySection.jsx
scripts/: deploy_rsk.py
test/: VitisRegistry.t.sol
tests/: test_agents.py  test_stellar_adapter.py
